tests/extern_static_failure/error.txt
Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 7: A static definition does not allow generic attribute
  7| generic T
     ^^^^^^^^^

Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 9: A static definition does not allow export attribute
  9| export "TODO: Allow exporting"
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 10: A static definition does not allow intrinsic attribute
  10| #intrinsic
      ^^^^^^^^^^

Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 11: A static definition does not allow lang attribute
  11| #lang "made_up_lang_item"
      ^^^^^^^^^^^^^^^^^^^^^^^^^

Validation error: Duplicate declarations for extern `made_up_symbol`
Note: ./tests/extern_static_failure/extern_static_failure.fae, line 2: Declaration here
  2| static EXTERNAL_STATIC: i32
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Note: ./tests/extern_static_failure/extern_static_failure.fae, line 5: Declaration here
  5| static DUPLICATE: i32
     ^^^^^^^^^^^^^^^^^^^^^
